--- a/output.css
+++ b/output.css
@@ -544,12 +544,56 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .sticky {
   position: sticky;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-\[\] {
+  bottom: ;
+}
+
+.bottom-\[-1px\] {
+  bottom: -1px;
+}
+
+.-bottom-0 {
+  bottom: -0px;
+}
+
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.m-\[-\] {
+  margin: -;
+}
+
+.m-\[-20px\] {
+  margin: -20px;
 }
 
 .block {
@@ -564,6 +608,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
@@ -574,6 +622,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .w-12 {
@@ -588,12 +648,24 @@ video {
   width: 24rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .scroll-my-16 {
@@ -641,6 +713,10 @@ video {
   gap: 3rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -649,12 +725,35 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-r-lg {
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
 }
 
 .border {
@@ -663,6 +762,18 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-b {
@@ -674,34 +785,38 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-primary {
+.border-fg {
   --tw-border-opacity: 1;
-  border-color: rgb(204 151 46 / var(--tw-border-opacity));
+  border-color: rgb(211 198 170 / var(--tw-border-opacity));
 }
 
-.border-light {
-  --tw-border-opacity: 1;
-  border-color: rgb(246 239 228 / var(--tw-border-opacity));
-}
-
-.border-dark {
-  --tw-border-opacity: 1;
-  border-color: rgb(16 12 4 / var(--tw-border-opacity));
-}
-
-.bg-dark {
+.bg-bg0 {
   --tw-bg-opacity: 1;
-  background-color: rgb(16 12 4 / var(--tw-bg-opacity));
+  background-color: rgb(45 53 59 / var(--tw-bg-opacity));
 }
 
-.bg-light {
+.bg-fg {
   --tw-bg-opacity: 1;
-  background-color: rgb(246 239 228 / var(--tw-bg-opacity));
+  background-color: rgb(211 198 170 / var(--tw-bg-opacity));
 }
 
-.bg-primary {
+.bg-bg_dim {
   --tw-bg-opacity: 1;
-  background-color: rgb(204 151 46 / var(--tw-bg-opacity));
+  background-color: rgb(35 42 46 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-inherit {
+  background-color: inherit;
+}
+
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -723,19 +838,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -770,27 +880,132 @@ video {
   font-weight: 700;
 }
 
-.text-dark {
+.text-fg {
   --tw-text-opacity: 1;
-  color: rgb(16 12 4 / var(--tw-text-opacity));
+  color: rgb(211 198 170 / var(--tw-text-opacity));
 }
 
-.text-light {
-  --tw-text-opacity: 1;
-  color: rgb(246 239 228 / var(--tw-text-opacity));
+.shadow-\[0_0_0_250px\] {
+  --tw-shadow: 0 0 0 250px;
+  --tw-shadow-colored: 0 0 0 250px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(204 151 46 / var(--tw-text-opacity));
+.shadow-\[0_0_0_250px_black\] {
+  --tw-shadow: 0 0 0 250px black;
+  --tw-shadow-colored: 0 0 0 250px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_0_1rem\] {
+  --tw-shadow: 0 0 0 1rem;
+  --tw-shadow-colored: 0 0 0 1rem var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[8px_4px_0_20px\] {
+  --tw-shadow: 8px 4px 0 20px;
+  --tw-shadow-colored: 8px 4px 0 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[8px_4px_0_1px\] {
+  --tw-shadow: 8px 4px 0 1px;
+  --tw-shadow-colored: 8px 4px 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[1px_4px_0_1px\] {
+  --tw-shadow: 1px 4px 0 1px;
+  --tw-shadow-colored: 1px 4px 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[1px_1px_0_1px\] {
+  --tw-shadow: 1px 1px 0 1px;
+  --tw-shadow-colored: 1px 1px 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_1px_0_1px\] {
+  --tw-shadow: -1px 1px 0 1px;
+  --tw-shadow-colored: -1px 1px 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_1px_1px_1px\] {
+  --tw-shadow: -1px 1px 1px 1px;
+  --tw-shadow-colored: -1px 1px 1px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_1px_0px_1px\] {
+  --tw-shadow: -1px 1px 0px 1px;
+  --tw-shadow-colored: -1px 1px 0px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_1px_0px_2px\] {
+  --tw-shadow: -1px 1px 0px 2px;
+  --tw-shadow-colored: -1px 1px 0px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_1px_0px_0\.5px\] {
+  --tw-shadow: -1px 1px 0px 0.5px;
+  --tw-shadow-colored: -1px 1px 0px 0.5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-1px_0\.5px_0px_0\.5px\] {
+  --tw-shadow: -1px 0.5px 0px 0.5px;
+  --tw-shadow-colored: -1px 0.5px 0px 0.5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-0\.5px_0\.5px_0px_0\.5px\] {
+  --tw-shadow: -0.5px 0.5px 0px 0.5px;
+  --tw-shadow-colored: -0.5px 0.5px 0px 0.5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-2px_1px_0px_0\.5px\] {
+  --tw-shadow: -2px 1px 0px 0.5px;
+  --tw-shadow-colored: -2px 1px 0px 0.5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[-2px_2px_0px_0\.5px\] {
+  --tw-shadow: -2px 2px 0px 0.5px;
+  --tw-shadow-colored: -2px 2px 0px 0.5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-black {
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-fg {
+  --tw-shadow-color: #D3C6AA;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .transition-all {
@@ -799,20 +1014,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-75 {
-  transition-duration: 75ms;
-}
-
-.duration-150 {
-  transition-duration: 150ms;
-}
-
 .duration-100 {
   transition-duration: 100ms;
 }
 
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.duration-150 {
+  transition-duration: 150ms;
 }
 
 .ease-in {
@@ -825,35 +1032,40 @@ video {
   src: url("public/font/NotoSans-VariableFont_wdth\,wght.ttf");
 }
 
-.hover\:bg-primary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 151 46 / var(--tw-bg-opacity));
+.after\:h-4::after {
+  content: var(--tw-content);
+  height: 1rem;
 }
 
-.hover\:bg-dark:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 12 4 / var(--tw-bg-opacity));
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
 }
 
-.hover\:bg-light:hover {
+.after\:bg-red::after {
+  content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: rgb(246 239 228 / var(--tw-bg-opacity));
+  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
 }
 
-.hover\:text-dark:hover {
+.after\:content-\[\]::after {
+  --tw-content: ;
+  content: var(--tw-content);
+}
+
+.after\:content-\[\"\"\]::after {
+  --tw-content: "";
+  content: var(--tw-content);
+}
+
+.hover\:bg-fg:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 198 170 / var(--tw-bg-opacity));
+}
+
+.hover\:text-bg0:hover {
   --tw-text-opacity: 1;
-  color: rgb(16 12 4 / var(--tw-text-opacity));
-}
-
-.hover\:text-primary:hover {
-  --tw-text-opacity: 1;
-  color: rgb(204 151 46 / var(--tw-text-opacity));
-}
-
-.active\:scale-90:active {
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  color: rgb(45 53 59 / var(--tw-text-opacity));
 }
 
 .active\:scale-95:active {
@@ -862,7 +1074,71 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.active\:bg-dark:active {
+.grouptab=0 .group-\[tab\=0\]\:bg-red {
   --tw-bg-opacity: 1;
-  background-color: rgb(16 12 4 / var(--tw-bg-opacity));
+  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:block {
+  display: block;
+}
+
+.group[data-tab=b] .group-data-\[tab\=b\]\:block {
+  display: block;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-t {
+  border-top-width: 1px;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-l {
+  border-left-width: 1px;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-r {
+  border-right-width: 1px;
+}
+
+.group[data-tab=b] .group-data-\[tab\=b\]\:border-l {
+  border-left-width: 1px;
+}
+
+.group[data-tab=b] .group-data-\[tab\=b\]\:border-r {
+  border-right-width: 1px;
+}
+
+.group[data-tab=b] .group-data-\[tab\=b\]\:border-t {
+  border-top-width: 1px;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-fg {
+  --tw-border-opacity: 1;
+  border-color: rgb(211 198 170 / var(--tw-border-opacity));
+}
+
+.group[data-tab=b] .group-data-\[tab\=b\]\:border-fg {
+  --tw-border-opacity: 1;
+  border-color: rgb(211 198 170 / var(--tw-border-opacity));
+}
+
+.group[data-tab=0] .group-data-\[tab\=0\]\:bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
+}
+
+.peer[data-tab=f] ~ .peer-data-\[tab\=f\]\:rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
+}
+
+.peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
+}
+
+.peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:rounded-tl-lg {
+  border-top-left-radius: 0.5rem;
 }
