--- a/output.css
+++ b/output.css
@@ -556,32 +556,12 @@ video {
   position: sticky;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-\[\] {
-  bottom: ;
-}
-
-.bottom-\[-1px\] {
-  bottom: -1px;
-}
-
-.-bottom-0 {
-  bottom: -0px;
-}
-
 .-bottom-1 {
   bottom: -0.25rem;
 }
 
-.bottom-1 {
-  bottom: 0.25rem;
+.top-0 {
+  top: 0px;
 }
 
 .left-0 {
@@ -590,18 +570,6 @@ video {
 
 .z-10 {
   z-index: 10;
-}
-
-.m-\[-\] {
-  margin: -;
-}
-
-.m-\[-20px\] {
-  margin: -20px;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
@@ -620,52 +588,44 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.h-96 {
-  height: 24rem;
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-8 {
-  height: 2rem;
+.h-full {
+  height: 100%;
 }
 
 .w-12 {
   width: 3rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
-.w-96 {
-  width: 24rem;
+.w-24 {
+  width: 6rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
 .max-w-6xl {
   max-width: 72rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .flex-1 {
@@ -733,25 +693,12 @@ video {
   gap: 2rem;
 }
 
-.justify-self-center {
-  justify-self: center;
+.place-self-end {
+  place-self: end;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-t-md {
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
 }
 
 .rounded-b-lg {
@@ -759,13 +706,9 @@ video {
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-r-lg {
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-tr-lg {
-  border-top-right-radius: 0.5rem;
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
 }
 
 .border {
@@ -776,25 +719,8 @@ video {
   border-width: 2px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-l {
-  border-left-width: 1px;
-}
-
-.border-r {
-  border-right-width: 1px;
-}
-
 .border-b {
   border-bottom-width: 1px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-fg {
@@ -802,39 +728,14 @@ video {
   border-color: rgb(211 198 170 / var(--tw-border-opacity));
 }
 
-.border-aqua {
-  --tw-border-opacity: 1;
-  border-color: rgb(131 192 146 / var(--tw-border-opacity));
-}
-
-.border-purple {
-  --tw-border-opacity: 1;
-  border-color: rgb(214 153 182 / var(--tw-border-opacity));
-}
-
 .border-green {
   --tw-border-opacity: 1;
   border-color: rgb(167 192 128 / var(--tw-border-opacity));
 }
 
-.border-red {
-  --tw-border-opacity: 1;
-  border-color: rgb(230 126 128 / var(--tw-border-opacity));
-}
-
 .border-orange {
   --tw-border-opacity: 1;
   border-color: rgb(230 152 117 / var(--tw-border-opacity));
-}
-
-.border-yellow {
-  --tw-border-opacity: 1;
-  border-color: rgb(219 188 127 / var(--tw-border-opacity));
-}
-
-.border-blue {
-  --tw-border-opacity: 1;
-  border-color: rgb(127 187 179 / var(--tw-border-opacity));
 }
 
 .bg-bg0 {
@@ -847,32 +748,19 @@ video {
   background-color: rgb(211 198 170 / var(--tw-bg-opacity));
 }
 
-.bg-bg_dim {
-  --tw-bg-opacity: 1;
-  background-color: rgb(35 42 46 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-inherit {
-  background-color: inherit;
-}
-
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(230 126 128 / var(--tw-bg-opacity));
 }
 
-.bg-purple {
+.bg-bg1 {
   --tw-bg-opacity: 1;
-  background-color: rgb(214 153 182 / var(--tw-bg-opacity));
+  background-color: rgb(52 63 68 / var(--tw-bg-opacity));
 }
 
-.p-4 {
-  padding: 1rem;
+.bg-bg_dim {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 42 46 / var(--tw-bg-opacity));
 }
 
 .p-8 {
@@ -894,22 +782,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .text-center {
@@ -949,24 +829,9 @@ video {
   color: rgb(211 198 170 / var(--tw-text-opacity));
 }
 
-.text-aqua {
-  --tw-text-opacity: 1;
-  color: rgb(131 192 146 / var(--tw-text-opacity));
-}
-
-.text-purple {
-  --tw-text-opacity: 1;
-  color: rgb(214 153 182 / var(--tw-text-opacity));
-}
-
 .text-green {
   --tw-text-opacity: 1;
   color: rgb(167 192 128 / var(--tw-text-opacity));
-}
-
-.text-red {
-  --tw-text-opacity: 1;
-  color: rgb(230 126 128 / var(--tw-text-opacity));
 }
 
 .text-orange {
@@ -974,137 +839,83 @@ video {
   color: rgb(230 152 117 / var(--tw-text-opacity));
 }
 
-.text-yellow {
-  --tw-text-opacity: 1;
-  color: rgb(219 188 127 / var(--tw-text-opacity));
+.grayscale {
+  --tw-grayscale: grayscale(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.text-blue {
-  --tw-text-opacity: 1;
-  color: rgb(127 187 179 / var(--tw-text-opacity));
+.hue-rotate-30 {
+  --tw-hue-rotate: hue-rotate(30deg);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[0_0_0_250px\] {
-  --tw-shadow: 0 0 0 250px;
-  --tw-shadow-colored: 0 0 0 250px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hue-rotate-60 {
+  --tw-hue-rotate: hue-rotate(60deg);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[0_0_0_250px_black\] {
-  --tw-shadow: 0 0 0 250px black;
-  --tw-shadow-colored: 0 0 0 250px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hue-rotate-90 {
+  --tw-hue-rotate: hue-rotate(90deg);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia {
+  --tw-sepia: sepia(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[\] {
+  --tw-sepia: sepia();
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[0_0_0_1rem\] {
-  --tw-shadow: 0 0 0 1rem;
-  --tw-shadow-colored: 0 0 0 1rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[50\%\] {
+  --tw-sepia: sepia(50%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[8px_4px_0_20px\] {
-  --tw-shadow: 8px 4px 0 20px;
-  --tw-shadow-colored: 8px 4px 0 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[30\%\] {
+  --tw-sepia: sepia(30%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[8px_4px_0_1px\] {
-  --tw-shadow: 8px 4px 0 1px;
-  --tw-shadow-colored: 8px 4px 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[10\%\] {
+  --tw-sepia: sepia(10%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[1px_4px_0_1px\] {
-  --tw-shadow: 1px 4px 0 1px;
-  --tw-shadow-colored: 1px 4px 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[0\%\] {
+  --tw-sepia: sepia(0%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[1px_1px_0_1px\] {
-  --tw-shadow: 1px 1px 0 1px;
-  --tw-shadow-colored: 1px 1px 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[100\%\] {
+  --tw-sepia: sepia(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[-1px_1px_0_1px\] {
-  --tw-shadow: -1px 1px 0 1px;
-  --tw-shadow-colored: -1px 1px 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[60\%\] {
+  --tw-sepia: sepia(60%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[-1px_1px_1px_1px\] {
-  --tw-shadow: -1px 1px 1px 1px;
-  --tw-shadow-colored: -1px 1px 1px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[70\%\] {
+  --tw-sepia: sepia(70%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[-1px_1px_0px_1px\] {
-  --tw-shadow: -1px 1px 0px 1px;
-  --tw-shadow-colored: -1px 1px 0px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[80\%\] {
+  --tw-sepia: sepia(80%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[-1px_1px_0px_2px\] {
-  --tw-shadow: -1px 1px 0px 2px;
-  --tw-shadow-colored: -1px 1px 0px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.sepia-\[40\%\] {
+  --tw-sepia: sepia(40%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.shadow-\[-1px_1px_0px_0\.5px\] {
-  --tw-shadow: -1px 1px 0px 0.5px;
-  --tw-shadow-colored: -1px 1px 0px 0.5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-1px_0\.5px_0px_0\.5px\] {
-  --tw-shadow: -1px 0.5px 0px 0.5px;
-  --tw-shadow-colored: -1px 0.5px 0px 0.5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-0\.5px_0\.5px_0px_0\.5px\] {
-  --tw-shadow: -0.5px 0.5px 0px 0.5px;
-  --tw-shadow-colored: -0.5px 0.5px 0px 0.5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-2px_1px_0px_0\.5px\] {
-  --tw-shadow: -2px 1px 0px 0.5px;
-  --tw-shadow-colored: -2px 1px 0px 0.5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-2px_2px_0px_0\.5px\] {
-  --tw-shadow: -2px 2px 0px 0.5px;
-  --tw-shadow-colored: -2px 2px 0px 0.5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[\] {
-  --tw-shadow-color: ;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-black {
-  --tw-shadow-color: #000;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-fg {
-  --tw-shadow-color: #D3C6AA;
-  --tw-shadow: var(--tw-shadow-colored);
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
@@ -1131,70 +942,14 @@ video {
   src: url("public/font/NotoSans-VariableFont_wdth\,wght.ttf");
 }
 
-.after\:h-4::after {
-  content: var(--tw-content);
-  height: 1rem;
-}
-
-.after\:w-full::after {
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.after\:bg-red::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
-}
-
-.after\:content-\[\]::after {
-  --tw-content: ;
-  content: var(--tw-content);
-}
-
-.after\:content-\[\"\"\]::after {
-  --tw-content: "";
-  content: var(--tw-content);
-}
-
-.hover\:bg-fg:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 198 170 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-aqua:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(131 192 146 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-purple:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(214 153 182 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-green:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(167 192 128 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-orange:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(230 152 117 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-yellow:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 188 127 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 187 179 / var(--tw-bg-opacity));
 }
 
 .hover\:text-bg0:hover {
@@ -1208,29 +963,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grouptab=0 .group-\[tab\=0\]\:bg-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
-}
-
-.group[data-tab=f] .group-data-\[tab\=f\]\:block {
-  display: block;
-}
-
 .group[data-tab=b] .group-data-\[tab\=b\]\:block {
   display: block;
 }
 
-.group[data-tab=f] .group-data-\[tab\=f\]\:border-t {
-  border-top-width: 1px;
-}
-
-.group[data-tab=f] .group-data-\[tab\=f\]\:border-l {
-  border-left-width: 1px;
-}
-
-.group[data-tab=f] .group-data-\[tab\=f\]\:border-r {
-  border-right-width: 1px;
+.group[data-tab=f] .group-data-\[tab\=f\]\:block {
+  display: block;
 }
 
 .group[data-tab=b] .group-data-\[tab\=b\]\:border-l {
@@ -1245,9 +983,16 @@ video {
   border-top-width: 1px;
 }
 
-.group[data-tab=f] .group-data-\[tab\=f\]\:border-fg {
-  --tw-border-opacity: 1;
-  border-color: rgb(211 198 170 / var(--tw-border-opacity));
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-l {
+  border-left-width: 1px;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-r {
+  border-right-width: 1px;
+}
+
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-t {
+  border-top-width: 1px;
 }
 
 .group[data-tab=b] .group-data-\[tab\=b\]\:border-fg {
@@ -1255,24 +1000,15 @@ video {
   border-color: rgb(211 198 170 / var(--tw-border-opacity));
 }
 
-.group[data-tab=0] .group-data-\[tab\=0\]\:bg-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
-}
-
-.group[data-tab=f] .group-data-\[tab\=f\]\:bg-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 126 128 / var(--tw-bg-opacity));
-}
-
-.peer[data-tab=f] ~ .peer-data-\[tab\=f\]\:rounded-tr-lg {
-  border-top-right-radius: 0.5rem;
-}
-
-.peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:rounded-tr-lg {
-  border-top-right-radius: 0.5rem;
+.group[data-tab=f] .group-data-\[tab\=f\]\:border-fg {
+  --tw-border-opacity: 1;
+  border-color: rgb(211 198 170 / var(--tw-border-opacity));
 }
 
 .peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:rounded-tl-lg {
   border-top-left-radius: 0.5rem;
+}
+
+.peer[data-tab=f] ~ .peer-data-\[tab\=f\]\:rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
 }
