--- a/output.css
+++ b/output.css
@@ -632,6 +632,14 @@ video {
   width: 50%;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -646,6 +654,10 @@ video {
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -663,6 +675,14 @@ video {
 
 .grid-cols-\[1fr_1fr\] {
   grid-template-columns: 1fr 1fr;
+}
+
+.grid-cols-\[\] {
+  grid-template-columns: ;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -799,6 +819,14 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-8 {
@@ -984,6 +1012,14 @@ video {
 .shadow-\[0px_\] {
   --tw-shadow-color: 0px;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.outline-orange {
+  outline-color: #E69875;
 }
 
 .grayscale {
@@ -1189,6 +1225,10 @@ video {
 
 .peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:block {
   display: block;
+}
+
+.peer[data-tab=f] ~ .peer-data-\[tab\=f\]\:flex {
+  display: flex;
 }
 
 .peer[data-tab=b] ~ .peer-data-\[tab\=b\]\:hidden {
